Now running on python 3.5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
-app-db:
-  image: mysql
-app-web:
+app1-db:
+  image: postgres
+app1-web:
   build: .
   command: python manage.py runserver 0.0.0.0:8000
   volumes:
@@ -8,4 +8,4 @@ app-web:
   ports:
      - "8000:8000"
   links:
-     - app-db
+     - app1-db
