CherryPy server working, without authentication. Had to write a .sh script intead of using the Dockerfile, which was a bit iffy tbh

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ inployment-db:
     - POSTGRES_USER=inployer
 inployment-web:
   build: .
-  command: python manage.py runserver 0.0.0.0:8000
+  command: bash start.sh
   volumes:
     - .:/code
   ports:
