--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ inployment-web:
     - ./inployment-django:/code
   ports:
      - "8000:8000"
+  dns: 8.8.8.8
   links:
      - inployment-db
   command: /usr/local/bin/gunicorn inployment.wsgi:application -w 2 -b :8000
