--- a/inployment-django/Dockerfile
+++ b/inployment-django/Dockerfile
@@ -5,3 +5,5 @@ WORKDIR /code
 ADD requirements.txt /code/
 RUN pip install -r /code/requirements.txt
 ADD . /code/
+
+#RUN Xvfb :99 -screen 0 1024x768x16 &> xvfb.log  &
