Moved to ubuntu box, not python, to make apt usage possible. Still can't quite believe it finally worked.

--- a/inployment-django/Dockerfile
+++ b/inployment-django/Dockerfile
@@ -1,9 +1,14 @@
-FROM python:2.7
+FROM ubuntu:14.04
+
+#RUN apt-get update && apt-get upgrade
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code/
-RUN pip install -r /code/requirements.txt
+
+RUN apt-get update && apt-get install -y libpq-dev python-dev python3-pip xvfb
+RUN pip3 install --upgrade pip
+RUN pip3 install -r /code/requirements.txt
 ADD . /code/
 
 #RUN Xvfb :99 -screen 0 1024x768x16 &> xvfb.log  &
