--- a/inployment-django/Dockerfile
+++ b/inployment-django/Dockerfile
@@ -1,14 +1,13 @@
 FROM ubuntu:14.04
 
-#RUN apt-get update && apt-get upgrade
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONUNBUFFERED=1 DISPLAY=:99
 RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code/
 
-RUN apt-get update && apt-get install -y libpq-dev python-dev python3-pip xvfb
+RUN apt-get update && apt-get install -y libpq-dev python-dev python3-pip xvfb firefox
 RUN pip3 install --upgrade pip
 RUN pip3 install -r /code/requirements.txt
 ADD . /code/
 
-#RUN Xvfb :99 -screen 0 1024x768x16 &> xvfb.log  &
+RUN Xvfb :99 -ac &
