Fuck this bullshit they're the same files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ inployment-db:
     - POSTGRES_USER=inployer
 
 inployment-web:
+  dns: 8.8.8.8
   build: ./inployment-django
   volumes:
     - ./inployment-django:/code
