--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ inployment-db:
     - POSTGRES_USER=inployer
 
 inployment-web:
-  dns: 8.8.8.8
+  dns: ["8.8.8.8"]
   build: ./inployment-django
   volumes:
     - ./inployment-django:/code
@@ -13,7 +13,7 @@ inployment-web:
      - "8000:8000"
   links:
      - inployment-db
-  command: /usr/local/bin/gunicorn inployment.wsgi:application -w 2 -b :8000
+  command: "/usr/local/bin/gunicorn inployment.wsgi:application -w 2 -b :8000"
 
 inployment-nginx:
   restart: always
